Added: UI changes

--- a/Pages/displayBook.html
+++ b/Pages/displayBook.html
@@ -146,8 +146,8 @@
 
 
                 <div class="nme">
-                    <div class="nmeLogo">SB</div>
-                    <div class="fullNme">Shweta Bodkar</div>
+                    <div class="nmeLogo shweta">SB</div>
+                    <div class="fullNme shweta">Shweta Bodkar</div>
                 </div>
                 <div class="str">
                     <span class="fa fa-star checked"></span>
