Refactored: UI for WishList Button

--- a/Pages/displayBook.html
+++ b/Pages/displayBook.html
@@ -59,12 +59,14 @@
                 <div class="bookBtn">
                     <button class="bagButton" id="bagButton">ADD TO BAG</button>
                     <div class="productCounter" id="productCounter">
-                        <button class="counter-minus">-</button>
-                        <div class="counter-display"></div>
+                        <button class="counter-minus" id ="counter-minus">-</button>
+                        <div class="counter-display" id ="counter-display"></div>
 
-                        <button class="counter-plus">+</button>
+                        <button class="counter-plus" id="counter-plus">+</button>
                     </div>
                     <button class="wishButton" id="wishButton">WISHLIST</button>
+                    <button class ="alWish" id="alWish"> ADDED TO WISHLIST</button>
+                    <button class ="alWish1" id="alWish1">ALREADY IN WISHLIST</button>
 
                 </div>
             </div>
@@ -146,8 +148,8 @@
 
 
                 <div class="nme">
-                    <div class="nmeLogo shweta">SB</div>
-                    <div class="fullNme shweta">Shweta Bodkar</div>
+                    <div class="nmeLogo">SB</div>
+                    <div class="fullNme">Shweta Bodkar</div>
                 </div>
                 <div class="str">
                     <span class="fa fa-star checked"></span>
@@ -171,31 +173,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <link rel="stylesheet" href="/CSS/displayBook.css">
     <script src="/JS/displayBook.js"></script>
     <!-- <script src="/JS/BookListing.js"></script> -->
@@ -207,9 +184,12 @@
         integrity="sha512-c3Nl8+7g4LMSTdrm621y7kf9v3SDPnhxLNhcjFJbKECVnmZHTdo+IRO05sNLTH/D3vA6u1X32ehoLC7WFVdheg=="
         crossorigin="anonymous"> </script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
+        <script type="text/javascript" 
+            src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js">
+    </script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
