Refactored: Header of DisplayBook Page

--- a/Pages/displayBook.html
+++ b/Pages/displayBook.html
@@ -34,7 +34,7 @@
 
             <div class="cart">
                 <div class="cartIcon">
-                    <i class="material-icons" id="usrIcon">perm_identity</i>
+                    <i class="material-icons" id="usrIcon">shopping_cart</i>
 
                 </div>
                 <div class="cartName">Cart</div>
